--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bienvenudo al sitio web</title>
+    <link rel="stylesheet" href="/CSS/style.css">
 </head>
 <body>
+    
+    <div id="encabezado">
+
+        <h2 class="primero">Clinica de Fisioterapia</h2>
+        <h2 class="segundo">Rehabilitacion</h2>
+        <h2 class="tercero">Servicios</h2>
+    </div>
+<p>
+    ¡Bienvenudo a mi sitio web! Aquí encontrarás información interesante sobre diversos temas. Navega por las secciones para descubrir más.
+</p>
+<button onclick="mostrarAlerta()">Haz clic aquí para una sorpresa</button>
+
+    <script src="/JS/function.js"></script>
     
 </body>
 </html>
