Hice el menu y poco mas

--- a/index.html
+++ b/index.html
@@ -9,11 +9,25 @@
 <body>
     
     <div id="encabezado">
+        <div class="logo"><img src="/images/logo.png"> </div>
+        <div class="menu">
+<ul>
+    <li><a href="#">Inicio</a></li>
+    <li><a href="#">Lesiones</a></li>
+    <li><a href="#">Autocuidado</a></li>
+    <li><a href="#">Deporte</a></li>
+    <li><a href="#">Mujer</a></li>
+    <li><a href="#">Niños</a></li>
+    <li><a href="#">Clinicas</a></li>
+</ul>
 
+        </div>
+        <div class="redes"> Redes</div>
+    </div>
+    
         <h2 class="primero">Clinica de Fisioterapia</h2>
         <h2 class="segundo">Rehabilitacion</h2>
         <h2 class="tercero">Servicios</h2>
-    </div>
 <p>
     ¡Bienvenudo a mi sitio web! Aquí encontrarás información interesante sobre diversos temas. Navega por las secciones para descubrir más.
 </p>
