--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
 </ul>
 
         </div>
-        <div class="redes"> Redes</div>
+        <div class="redes"> 
+            <img src="/images/feibu.png">
+            <img src="/images/ig.png">
+            <img src="/images/x.webp">
+            <img src="/images/tikitoko.webp">
+
+        </div>
     </div>
     
         <h2 class="primero">Clinica de Fisioterapia</h2>
